<resources>
    <string name="app_name">BluetoothVsWifiDirect</string>
    <string name="menu_countries">Show countries</string>
    <string name="menu_contacts">Show contacts</string>
    <string name="start_dis">Start discovery</string>
    <string name="stop_dis">Stop discovery</string>
    <string name="button_restart">Restart?</string>
    <string name="button_searching">Searching...</string>

    <string name="start_as_peer">Start as peer</string>
    <string name="start_group_owner">Start group owner</string>
    <string name="start_server">start server</string>
    <string name="connect_to_server">connect to server</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
